# claude-wiki-template

./: .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  changelog.md  pyproject.toml  requirements.txt
.claude/: settings.json
.claude/commands/: wiki-bilingual.md  wiki-graph.md  wiki-ingest.md  wiki-lint.md  wiki-query.md  wiki-synthesis.md
.claude/schema/: card-types.md  page-format.md  workflows.md
browser/: data.js  index.html  robots.txt
browser/content/: bundle.json  index.json  overview.json
docs/: CONTRIBUTING.md  CUSTOMIZATION.md  LANGUAGE.md
tools/: batch_add_descriptions.py  build_browser.py  build_graph.py  config.yaml  config_loader.py  fix_bilingual_format.py  heal.py  health.py  ingest.py  lint.py  normalize_filenames.py  pdf2md.py  query.py  refetch_full_text.py  refresh.py
wiki/: index.md  log.md  overview.md
wiki/types/: action.md  atom.md  basic.md  concept.md  entity.md  event.md  index-card.md  insight.md  new-word.md  person.md  query.md  quote.md  schema.md  source.md  synthesis.md  terminology.md
